# elastic-neo4j-attack-chain

./: .env  .gitignore  docker-compose.yml  project-structure.md  pyproject.toml
.devcontainer/: devcontainer.json  post_create.sh
_docs/: Add-Fleet Server.txt  ESQL.sql  Final-Kiill-chain.json  Hsot-DSL.txt  TEST.json  query.json
backend/.data/: mcp-multi-agents-neo4j.json
backend/scripts/: installs_neo4j.sh
backend/src/agents_attack_chain/: cli.py
backend/src/agents_attack_chain/clients/: elastic_client.py
backend/src/agents_attack_chain/db/: schema.py
backend/src/agents_attack_chain/neo4j_langchain/: LangChain.py
backend/src/agents_attack_chain/services/: attack_chain_service.py
backend/src/agents_attack_chain/transformers/: elastic_to_sepses.py
backend/src/elastic_neo4j_attack_chain/clients/: neo4j_client.py
backend/src/elastic_neo4j_attack_chain/config/: settings.py
backend/src/elastic_neo4j_attack_chain/models/: base.py  event.py  resource.py  threat.py
backend/src/elastic_neo4j_attack_chain/services/: attack_chain_service.py
backend/src/elastic_neo4j_attack_chain/transformers/: sepses_to_neo4j.py
data/: Kill-Chain-Query.json
utility/: Quesstions_Rules.txt  doc-neo4j.txt  mcp.json
