[tool.poetry]
name = "elastic-neo4j-attack-chain"
version = "1.0.0"
description = "Attack chain extraction from Elastic Security to Neo4j using SEPSes ontology"
authors = ["Security Engineer <security@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "elastic_neo4j_attack_chain", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = {version = "^8.17.1", extras = ["async"]}  # ✅ نسخه صحیح با پشتیبانی async
neo4j = "^5.23.0"  # نسخه جدید با پشتیبانی کامل از async
python-dotenv = "^1.0.1"
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
typer = "^0.12.5"
rich = "^13.9.0"
aiohttp = "^3.10.0"  # نیازمندی اجباری برای elasticsearch[async]
python-dateutil = "^2.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.0"
ruff = "^0.6.0"

[tool.poetry.scripts]
attack-chain = "elastic_neo4j_attack_chain.cli:app"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "RUF"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"